# Haptic-Manipulation-for-KUKA

./: README.md  dataset_info.json  package.xml  setup.py
config/: action_controller.yaml
haptic/: cartesian_controller.py  dataset_recorder.py  dataset_recorder_h5.py  down.sh  keyboard_control.py  lstm_policy.py  lstm_test.py  reset.py  tac3d_l.py  tac3d_r.py  test_inference_speed.py
haptic/models/cnn_ae/: cnn_autoencoder.py  config.yaml  train_cnn_autoencoder.py
haptic/models/feature_lstm/: DatasetSequence.py  config.yaml  feature_lstm.py  train_feature_lstm.py
haptic/models/resnet_ae/: config.yaml  train_resnet_autoencoder.py
launch/: tac3d_broadcast.py  teach_prepare.py  teach_record.py
